fix overflow

--- a/src/components/ChatView/ChatView.css
+++ b/src/components/ChatView/ChatView.css
@@ -20,7 +20,6 @@
 	display: flex;
 	flex-direction: column;
 	max-height: calc(100vh - 3rem);
-	overflow-y: hidden;
 }
 
 .chatview-me-message,
